creusot/tests/should_fail/prusti/blocked_lifetime/trait.stderr
error: invalid mut dereference of zombie expression with lifetime `'x` in state `'post`
 --> trait.rs:5:16
  |
5 |     #[ensures(*x == 5u32)]
  |                ^

error: aborting due to 1 previous error

